<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ru.itmo.stella</groupId>
  <artifactId>typechecker</artifactId>
  <version>1.0.0</version>
  
  <properties>
	  <maven.compiler.release>17</maven.compiler.release>
	  <maven.compiler.source>17</maven.compiler.source>
	  <maven.compiler.target>17</maven.compiler.target>
	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <dependencies>
	<dependency>
		<groupId>org.antlr</groupId>
	    <artifactId>antlr4-runtime</artifactId>
	    <version>4.7.1</version>
	</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.antlr</groupId>
			    <artifactId>antlr4-maven-plugin</artifactId>
			    <version>4.7.1</version>
			    <executions>
			        <execution>
			            <goals>
			                <goal>antlr4</goal>
			            </goals>
			        </execution>
			    </executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>  
		        <artifactId>maven-compiler-plugin</artifactId>
		        <version>3.12.1</version>
		        <configuration>
		            <source>17</source>
		            <target>17</target>
		        </configuration>
		    </plugin>
		    <plugin>
				<artifactId>maven-assembly-plugin</artifactId>
			  	<configuration>
					<finalName>typechecker</finalName>
					<archive>
						<manifest>
							<mainClass>ru.itmo.stella.main.StellaTypecheckerMain</mainClass>
						</manifest>
					</archive>
				  	<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
				  </descriptorRefs>
				</configuration>
			  	<executions>
				  	<execution>
						<id>make-assembly</id>
						<phase>package</phase>
					  		<goals>
						  		<goal>single</goal>
						  	</goals>
				  	</execution>
		  		</executions>
			</plugin>
		</plugins>
	</build>
</project>